[gd_scene load_steps=3 format=3 uid="uid://c0krlpbiun1ic"]

[ext_resource type="PackedScene" uid="uid://cq0bbpieyhdug" path="res://Core/UI/BasicSubWindow.tscn" id="1_g1tow"]
[ext_resource type="Script" uid="uid://c86snfjcgxmfx" path="res://Core/UI/SettingsWindow_Window.gd" id="2_v2kbv"]

[node name="SettingsWindow_Window" instance=ExtResource("1_g1tow")]
offset_right = 426.0
offset_bottom = 189.0
script = ExtResource("2_v2kbv")
label_text = "Window Settings"

[node name="WindowBorder" parent="." index="0"]
offset_right = 13.0

[node name="WindowTitle" parent="WindowTitlePanel" index="0"]
text = "Window Settings"

[node name="GridContainer" type="GridContainer" parent="." index="2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 4.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/h_separation = 16
theme_override_constants/v_separation = 2
columns = 2

[node name="Label3" type="Label" parent="GridContainer" index="0"]
layout_mode = 2
text = "Hide window elements"

[node name="OptionButton_HideWindowElements" type="OptionButton" parent="GridContainer" index="1"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
selected = 2
item_count = 3
popup/item_0/text = "Show All"
popup/item_0/id = 0
popup/item_1/text = "Window Decorations"
popup/item_1/id = 1
popup/item_2/text = "Decoration and Scene"
popup/item_2/id = 2

[node name="Label6" type="Label" parent="GridContainer" index="2"]
layout_mode = 2
text = "Background color"

[node name="ColorPickerButton_BackgroundColor" type="ColorPickerButton" parent="GridContainer" index="3"]
unique_name_in_owner = true
layout_mode = 2

[node name="Label7" type="Label" parent="GridContainer" index="4"]
layout_mode = 2
text = "VSync Mode"

[node name="OptionButton_VSyncMode" type="OptionButton" parent="GridContainer" index="5"]
unique_name_in_owner = true
layout_mode = 2
selected = 0
item_count = 4
popup/item_0/text = "Disabled"
popup/item_0/id = 0
popup/item_1/text = "Enabled"
popup/item_1/id = 1
popup/item_2/text = "Adaptive"
popup/item_2/id = 2
popup/item_3/text = "Mailbox"
popup/item_3/id = 3

[connection signal="item_selected" from="GridContainer/OptionButton_HideWindowElements" to="." method="_any_value_changed"]
[connection signal="color_changed" from="GridContainer/ColorPickerButton_BackgroundColor" to="." method="_any_value_changed"]
[connection signal="item_selected" from="GridContainer/OptionButton_VSyncMode" to="." method="_any_value_changed"]
